# RV-CornerStone-Gen2

./: .mxproject  CMakeLists.txt  RV-CornerStone-Gen2.ioc  STM32H753XX_FLASH.ld  board.cfg
Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: gpio.c  main.c  stm32h7xx_it.c  usart.c
Middlewares/CornerStone_Gen2/: CMakeLists.txt
Middlewares/CornerStone_Gen2/Core/Inc/: cpp_init.h
Middlewares/CornerStone_Gen2/Core/Src/: cpp_init.cpp
Middlewares/CornerStone_Gen2/Peripheral/Inc/: CommuPeripheral.h  Peripheral.h  Uart.h  Usart.h
Middlewares/CornerStone_Gen2/Peripheral/Src/: CommuPeripheral.cpp  Peripheral.cpp  Uart.cpp  Usart.cpp
cmake/stm32cubemx/: CMakeLists.txt
